--- a/package.json
+++ b/package.json
@@ -1,119 +1,109 @@
 {
-  "name": "cs.forms",
-  "version": "1.0.93",
-  "author": "Blue Chilli Technology Pty Ltd",
-  "description": "A collection of forms components, helpers and abstractions built in React. These can be used with or without Redux.",
-  "main": "dist/main.js",
-  "types": "index.d.ts",
-  "style": "dist/main.css",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/BlueChilli/ChilliSource.Web.Forms.git"
-  },
-  "keywords": [
-    "react",
-    "redux",
-    "form",
-    "forms"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/BlueChilli/ChilliSource.Web.Forms/issues"
-  },
-  "homepage": "https://github.com/BlueChilli/ChilliSource.Web.Forms#readme",
-  "scripts": {
-    "test": "jest",
-    "test-watch": "jest --watch",
-    "start": "node server.js",
-    "build": "webpack --config webpack.build.config.js",
-    "build-static": "webpack --config webpack.static.config.js"
-  },
-  "dependencies": {
-    "@types/react": "^15.0.27",
-    "classnames": "^2.2.5",
-    "cs.core": "BlueChilli/ChilliSource.Web.Core#1.0.6",
-    "immutable": "^3.8.1",
-    "jsx-to-string": "^1.1.0",
-    "moment": "^2.18.1",
-    "react": "^15.5.4",
-    "react-async-script-loader": "^0.3.0",
-    "react-date-range": "^0.9.3",
-    "react-dom": "^15.5.4",
-    "react-dropzone": "^3.13.4",
-    "react-onclickoutside": "^5.11.1",
-    "react-select": "^1.0.0-rc.3",
-    "react-syntax-highlighter": "^5.7.0",
-    "recompose": "0.24"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.s?css$": "<rootDir>/__mocks__/fileMock.js"
-    },
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "none",
-    "jsxBracketSameLine": true,
-    "useTabs": true,
-    "printWidth": 100
-  },
-  "devDependencies": {
-    "@types/classnames": "0.0.32",
-    "@types/enzyme": "^2.7.8",
-    "@types/jest": "^19.2.2",
-    "@types/lodash": "^4.14.62",
-    "@types/prop-types": "^15.5.1",
-    "@types/react": "^15.0.38",
-    "@types/react-dom": "^15.5.0",
-    "@types/react-dropzone": "0.0.32",
-    "@types/react-onclickoutside": "^5.7.3",
-    "@types/react-redux": "^4.4.39",
-    "@types/react-select": "^1.0.48",
-    "@types/recompose": "0.23.3",
-    "autoprefixer": "^6.7.7",
-    "awesome-typescript-loader": "^3.1.2",
-    "breakpoint-sass": "^2.7.1",
-    "clean-webpack-plugin": "^0.1.16",
-    "config": "^1.25.1",
-    "css-loader": "^0.28.0",
-    "dts-generator": "^2.1.0",
-    "enzyme": "^2.8.1",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "img-loader": "^2.0.0",
-    "jest": "^19.0.2",
-    "node-sass": "^4.5.2",
-    "open": "0.0.5",
-    "postcss-loader": "^1.3.3",
-    "raw-loader": "^0.5.1",
-    "react-test-renderer": "^15.5.4",
-    "redbox-react": "^1.5.0",
-    "sass-loader": "^6.0.3",
-    "scut": "^1.4.0",
-    "sinon": "^2.1.0",
-    "style-loader": "^0.16.1",
-    "susy": "^2.2.12",
-    "ts-jest": "^20.0.6",
-    "typescript": "^2.4.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
-  }
+	"name": "cs.forms",
+	"version": "2.0.0",
+	"author": "Blue Chilli Technology Pty Ltd",
+	"description":
+		"A collection of forms components, helpers and abstractions built in React. These can be used with or without Redux.",
+	"main": "dist/main.js",
+	"types": "index.d.ts",
+	"style": "dist/main.css",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/BlueChilli/ChilliSource.Web.Forms.git"
+	},
+	"keywords": ["react", "redux", "form", "forms"],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/BlueChilli/ChilliSource.Web.Forms/issues"
+	},
+	"homepage": "https://github.com/BlueChilli/ChilliSource.Web.Forms#readme",
+	"scripts": {
+		"test": "jest",
+		"test-watch": "jest --watch",
+		"start": "node server.js",
+		"build": "webpack --config webpack.build.config.js",
+		"build-static": "webpack --config webpack.static.config.js"
+	},
+	"dependencies": {
+		"@types/react": "^15.0.27",
+		"classnames": "^2.2.5",
+		"cs.core": "BlueChilli/ChilliSource.Web.Core#1.0.6",
+		"immutable": "^3.8.1",
+		"jsx-to-string": "^1.1.0",
+		"moment": "^2.18.1",
+		"react": "^15.5.4",
+		"react-async-script-loader": "^0.3.0",
+		"react-date-range": "^0.9.3",
+		"react-dom": "^15.5.4",
+		"react-dropzone": "^3.13.4",
+		"react-onclickoutside": "^5.11.1",
+		"react-select": "^1.0.0-rc.3",
+		"react-syntax-highlighter": "^5.7.0",
+		"recompose": "0.24"
+	},
+	"jest": {
+		"moduleFileExtensions": ["ts", "tsx", "js", "jsx"],
+		"moduleDirectories": ["node_modules"],
+		"moduleNameMapper": {
+			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+				"<rootDir>/__mocks__/fileMock.js",
+			"\\.s?css$": "<rootDir>/__mocks__/fileMock.js"
+		},
+		"transform": {
+			".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+		},
+		"testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
+	},
+	"prettier": {
+		"singleQuote": true,
+		"trailingComma": "none",
+		"jsxBracketSameLine": true,
+		"useTabs": true,
+		"printWidth": 100
+	},
+	"devDependencies": {
+		"@types/classnames": "0.0.32",
+		"@types/enzyme": "^2.7.8",
+		"@types/jest": "^19.2.2",
+		"@types/lodash": "^4.14.62",
+		"@types/prop-types": "^15.5.1",
+		"@types/react": "^15.0.38",
+		"@types/react-dom": "^15.5.0",
+		"@types/react-dropzone": "0.0.32",
+		"@types/react-onclickoutside": "^5.7.3",
+		"@types/react-redux": "^4.4.39",
+		"@types/react-select": "^1.0.48",
+		"@types/recompose": "0.23.3",
+		"autoprefixer": "^6.7.7",
+		"awesome-typescript-loader": "^3.1.2",
+		"breakpoint-sass": "^2.7.1",
+		"clean-webpack-plugin": "^0.1.16",
+		"config": "^1.25.1",
+		"css-loader": "^0.28.0",
+		"dts-generator": "^2.1.0",
+		"enzyme": "^2.8.1",
+		"express": "^4.15.2",
+		"extract-text-webpack-plugin": "^2.1.2",
+		"file-loader": "^0.11.1",
+		"html-webpack-plugin": "^2.28.0",
+		"img-loader": "^2.0.0",
+		"jest": "^19.0.2",
+		"node-sass": "^4.5.2",
+		"open": "0.0.5",
+		"postcss-loader": "^1.3.3",
+		"raw-loader": "^0.5.1",
+		"react-test-renderer": "^15.5.4",
+		"redbox-react": "^1.5.0",
+		"sass-loader": "^6.0.3",
+		"scut": "^1.4.0",
+		"sinon": "^2.1.0",
+		"style-loader": "^0.16.1",
+		"susy": "^2.2.12",
+		"ts-jest": "^20.0.6",
+		"typescript": "^2.4.1",
+		"url-loader": "^0.5.8",
+		"webpack": "^2.3.3",
+		"webpack-dev-middleware": "^1.10.1",
+		"webpack-hot-middleware": "^2.18.0"
+	}
 }
