--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "build": "webpack --config webpack.build.config.js"
   },
   "dependencies": {
-    "@types/react": "^15.0.27",
     "classnames": "^2.2.5",
-    "cs.core": "BlueChilli/ChilliSource.Web.Core#1.0.6",
     "immutable": "^3.8.1",
     "jsx-to-string": "^1.1.0",
     "moment": "^2.18.1",
@@ -98,10 +96,11 @@
     "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
     "ts-jest": "^20.0.6",
-    "typescript": "^2.4.1",
+    "typescript": "^2.5.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
