--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "react-dom": "^16.1.1",
     "react-dropzone": "^3.13.4",
     "react-onclickoutside": "^5.11.1",
-    "react-select": "^1.0.0-rc.3",
+    "react-select": "^1.0.1",
     "react-syntax-highlighter": "^5.7.0",
-    "recompose": "0.24"
+    "recompose": "^0.26.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -65,15 +65,15 @@
     "@types/classnames": "0.0.32",
     "@types/enzyme": "^2.7.8",
     "@types/jest": "^19.2.2",
-    "@types/lodash": "^4.14.62",
+    "@types/lodash": "^4.14.85",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
     "@types/react-dropzone": "0.0.32",
     "@types/react-onclickoutside": "^5.7.3",
     "@types/react-redux": "^4.4.39",
-    "@types/react-select": "^1.0.48",
-    "@types/recompose": "0.23.3",
+    "@types/react-select": "^1.0.59",
+    "@types/recompose": "^0.24.3",
     "autoprefixer": "^6.7.7",
     "awesome-typescript-loader": "^3.1.2",
     "clean-webpack-plugin": "^0.1.16",
@@ -94,10 +94,10 @@
     "react-test-renderer": "^15.5.4",
     "sass-loader": "^6.0.3",
     "sinon": "^2.1.0",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.19.0",
     "ts-jest": "^20.0.6",
     "typescript": "^2.5.3",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.6.2",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0",
